# rules_gnu

./: .gitattributes  CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/workflows/: release.yml  release_prep.sh
docs/: BUILD.bazel
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
gnu/: BUILD.bazel  extensions.bzl  repositories.bzl  toolchain.bzl
gnu/private/: BUILD.bazel  resolved_toolchain.bzl  toolchains_repo.bzl
gnu/tests/: versions_test.bzl
